tdf#107176: just return initial selection when there's no range

See https://bugs.documentfoundation.org/show_bug.cgi?id=107176#c2

Change-Id: I606b7f248821bb24b3a9026ecd26a9bc93971748
Reviewed-on: https://gerrit.libreoffice.org/36582
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 6bde2e93a2e0f94bc2263928cb27c4b85827822d)
Reviewed-on: https://gerrit.libreoffice.org/37787
Tested-by: Julien Nabet <serval2412@yahoo.fr>